crates/flir-core/src/lints/which_grepl/snapshots/flir_core__lints__which_grepl__tests__fix_output.snap
---
source: crates/flir-core/src/lints/which_grepl/mod.rs
expression: "get_fixed_text(vec![\"which(grepl('^a', x))\",\n\"which(grepl('^a', x, perl = TRUE, fixed = TRUE))\",], \"which_grepl\", None)"
---
OLD:
====
which(grepl('^a', x))
NEW:
====
grep('^a', x)

OLD:
====
which(grepl('^a', x, perl = TRUE, fixed = TRUE))
NEW:
====
grep('^a', x, perl = TRUE, fixed = TRUE)
