crates/flir-core/src/lints/which_grepl/snapshots/flir_core__lints__which_grepl__tests__no_fix_with_comments.snap
---
source: crates/flir-core/src/lints/which_grepl/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nwhich(grepl('^a', x))\",\n\"which(\\n  # comment\\n  grepl('^a', x)\\n)\",\n\"which(grepl(\\n    # comment\\n    '^a', x\\n  ))\",\n\"which(grepl('^a', x)) # trailing comment\",], \"which_grepl\", None)"
---
OLD:
====
# leading comment
which(grepl('^a', x))
NEW:
====
# leading comment
grep('^a', x)

OLD:
====
which(
  # comment
  grepl('^a', x)
)
NEW:
====
which(
  # comment
  grepl('^a', x)
)

OLD:
====
which(grepl(
    # comment
    '^a', x
  ))
NEW:
====
which(grepl(
    # comment
    '^a', x
  ))

OLD:
====
which(grepl('^a', x)) # trailing comment
NEW:
====
grep('^a', x) # trailing comment
